--- a/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation.xaml
@@ -157,6 +157,9 @@
                                                         </Trigger>
                                                         <Trigger Property="Tag" Value="draconic">
                                                             <Setter TargetName="label" Property="ls:TextBlockFormatter.SourceText" Value="{Binding Source='h0e1fded7g681ag4e5fgb0a2gc5928ab399a1', Converter={StaticResource TranslatedStringConverter}}"/>
+															<!-- MOD START - Can hide draconic tab -->
+															<Setter Property="Opacity" Value="0"/>
+															<!-- MOD END -->
                                                         </Trigger>
                                                         <Trigger Property="Tag" Value="tail">
                                                             <Setter TargetName="label" Property="ls:TextBlockFormatter.SourceText" Value="{Binding Source='h11908357gafefg4f3dg92feg11588e5e123e', Converter={StaticResource TranslatedStringConverter}}"/>
@@ -189,13 +192,13 @@
                                 <ListBoxItem x:Name="generalTab" Tag="general" IsSelected="True"/>
 								<!-- MOD START - All tabs visible based on content -->
                                 <ListBoxItem x:Name="tattooAndPiercingTab" Tag="tattooandpiercing" Visibility="{Binding SelectablePiercings.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
-                                <ListBoxItem x:Name="eyesTab" Tag="eyes" Visibility="{Binding SelectableEyeColours.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
+                                <ListBoxItem x:Name="eyesTab" Tag="eyes" Visibility="{Binding SelectedOrigin.IsLockedAppearance, Converter={StaticResource BoolToCollapsedConverter}}"/>
                                 <ListBoxItem x:Name="makeupTab" Tag="makeup" Visibility="{Binding SelectableMakeup.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
 								<ListBoxItem x:Name="hairTab" Tag="hair" Visibility="{Binding SelectableHair.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
                                 <ListBoxItem x:Name="facialHairTab" Tag="facialhair" Visibility="{Binding SelectableBeards.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
                                 <ListBoxItem x:Name="hornsTab" Tag="horns" Visibility="{Binding SelectableHorns.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
-                                <ListBoxItem x:Name="draconicTab" Tag="draconic" Visibility="Collapsed"/>
                                 <ListBoxItem x:Name="tailTab" Tag="tail" Visibility="{Binding Path=SelectableTail.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
+								<ListBoxItem x:Name="draconicTab" Tag="draconic" Visibility="Visible"/>
 								<!-- MOD END -->
 
                             </ListBox>
@@ -203,8 +206,6 @@
 
                         <!-- Appearance Buttons on Appearance Page -->
                         <Control x:Name="appearanceButtons" Template="{StaticResource AppearanceButtonsTemplate}" Margin="0,0,492,64" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
-
-                        
 
                     </Grid>
 
@@ -290,21 +291,13 @@
                         <Setter TargetName="appearanceButtons" Property="Template" Value="{StaticResource AppearanceButtonsTemplateRandomOnly}"/>
                     </DataTrigger>
 
-                    <!-- MOD START - Draconic tab visible based on content -->
+                    <!-- MOD START - Draconic tab based on content -->
 					<MultiDataTrigger>
                         <MultiDataTrigger.Conditions>
                             <Condition Binding="{Binding CharacterCreationStep}" Value="Appearance"/>
                             <Condition Binding="{Binding SelectableScales.Count, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True"/>
                         </MultiDataTrigger.Conditions>
-                        <Setter TargetName="draconicTab" Property="Visibility" Value="Visible"/>
-                    </MultiDataTrigger>
-					
-					<MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding CharacterCreationStep}" Value="Appearance"/>
-                            <Condition Binding="{Binding SelectablePassiveColours.Count, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter TargetName="draconicTab" Property="Visibility" Value="Visible"/>
+                        <Setter TargetName="draconicTab" Property="Opacity" Value="1"/>
                     </MultiDataTrigger>
 					<!-- MOD END -->
 					
