--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -721,9 +721,7 @@
                 <ls:StateWidget Filename="Overlay.xaml" Layer="Notifications"/>
                 <ls:StateWidget Filename="WorldContextMenu.xaml" Layer="Notifications"/>
                 <ls:StateWidget Filename="OverheadInfo.xaml" Layer="HUD" IgnoreHitTest="True"/>
-				<!-- MOD START - Keyboard only tooltip toggle -->
-                <ls:StateWidget Filename="WorldTooltips_k.xaml" Layer="HUD"/>
-				<!-- MOD END -->
+                <ls:StateWidget Filename="WorldTooltips.xaml" Layer="HUD"/>
                 <ls:StateWidget Filename="HotBar.xaml" Layer="HUDTop"/>
                 <ls:StateWidget Filename="ReactionDecisionPopup.xaml" Layer="Notifications"/>
                 <ls:StateWidget Filename="Minimap.xaml" Layer="HUD"/>
